Attempt at fixing track image position on mobile

--- a/styles/Tracks.module.css
+++ b/styles/Tracks.module.css
@@ -95,7 +95,8 @@
     justify-content: center;
   }
   .image {
-    width: 100%;
+    height: 300px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,7 +107,7 @@
     height: 300px;
     width: 300px;
     margin: 0;
-    padding: 10px;
+    padding: 0 10px;
   }
   .text{
     margin: 0;
